# Skills

./: .gitignore  CMakeLists.txt  CN_notes.md  DB_notes.md  OS_notes.md  bash_notes.md  c++_notes.md  git_notes.md  make_notes.md  mysql_notes.md  python_notes.md  readme.md  vim_notes.md  zbs  zbs.cpp  zbs.sh
git/: git_notes.md
markdown/: markdown_notes.md
mysql/: mysql_notes.md
shell/: bash_notes.md  vim,grep,awk,sed.md
typing/: typing_notes.md
vim/: vim_notes.md
